# stm32pic

./: .gitignore  CMakeLists.txt  README.md
programs/toggle/: main.c  toggle.h  toggle.hex  toggle.s
src/: CMakeLists.txt  args.c  args.h  baseline_dec.h  baseline_lut.h  bit_lut.h  cpu.c  cpu.h  flash.c  flash.h  hex.c  hex.h  hex2c.c  main.c  ram.c  ram.h  regs.c  regs.h  sfr.c  sfr.h  sim.c  swap_lut.h
src/hw/: CMakeLists.txt  gpio.c  gpio.h  option.c  option.h  tmr0.c  tmr0.h
tools/: .gitignore  CMakeLists.txt
tools/gencpu/: CMakeLists.txt  args.c  args.h  insfile.c  insfile.h  insset.c  insset.h  main.c
tools/gencpu/sets/: baseline.txt
tools/hex2c/: CMakeLists.txt  args.c  args.h  hex.c  hex.h  main.c  mem.c  mem.h
